<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.wog.wogqr.LoginActivity"

    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/llLogin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llNonAuthorized"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_card"
                    android:id="@+id/textView"
                    android:layout_weight="40" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/edCardNumber"
                    android:hint="card number"
                    android:inputType="number"
                    android:layout_weight="70"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_password"
                    android:id="@+id/textView2"
                    android:layout_weight="40" />

                <EditText
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:id="@+id/edPassword"
                        android:hint="secret word"
                    android:layout_weight="70"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llAuthorized"
            >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_card"
                    android:id="@+id/textViewCard"
                    android:layout_weight="40" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCard"
                    android:layout_weight="70"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    />

                </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_email"
                    android:id="@+id/textViewEmail"
                    android:layout_weight="40" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:id="@+id/tvEmail"
                    android:layout_weight="70"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                     />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/label_phone"
                    android:id="@+id/textViewPhone"
                    android:layout_weight="40" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:id="@+id/tvPhone"
                    android:layout_weight="70"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:id="@+id/btnLogin"
        android:onClick="OnLoginClick"
        android:layout_below="@+id/llLogin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_copyright"
        android:background="@drawable/copyright_background"
        android:id="@+id/tvCopyright"

        android:gravity="center"
        android:textColor="@color/White"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

    />

</RelativeLayout>